--- a/js/localization/messages/nl.json
+++ b/js/localization/messages/nl.json
@@ -296,164 +296,164 @@
         "dxHtmlEditor-normalText": "Normale tekst",
 
         "dxFileManager-newDirectoryName": "TODO",
-        "dxFileManager-rootDirectoryName": "TODO",
-        "dxFileManager-errorNoAccess": "TODO",
+        "dxFileManager-rootDirectoryName": "Bestanden",
+        "dxFileManager-errorNoAccess": "Toegang geweigerd. Deze handeling kan niet worden uitgevoerd.",
         "dxFileManager-errorDirectoryExistsFormat": "TODO",
-        "dxFileManager-errorFileExistsFormat": "TODO",
-        "dxFileManager-errorFileNotFoundFormat": "TODO",
+        "dxFileManager-errorFileExistsFormat": "Bestand '{0}' besaat al.",
+        "dxFileManager-errorFileNotFoundFormat": "Bestand '{0}' niet gevonden.",
         "dxFileManager-errorDirectoryNotFoundFormat": "TODO",
-        "dxFileManager-errorWrongFileExtension": "TODO",
-        "dxFileManager-errorMaxFileSizeExceeded": "TODO",
-        "dxFileManager-errorInvalidSymbols": "TODO",
-        "dxFileManager-errorDefault": "TODO",
+        "dxFileManager-errorWrongFileExtension": "Bestand's extensie is niet toegelaten.",
+        "dxFileManager-errorMaxFileSizeExceeded": "Bestand's grootte overschrijdt de maximum toegelaten grootte.",
+        "dxFileManager-errorInvalidSymbols": "Deze naam bevat ongeldige karakters.",
+        "dxFileManager-errorDefault": "Niet gespecificeerde fout",
 
-        "dxDiagram-categoryGeneral": "TODO",
-        "dxDiagram-categoryFlowchart": "TODO",
-        "dxDiagram-categoryOrgChart": "TODO",
-        "dxDiagram-categoryContainers": "TODO",
-        "dxDiagram-categoryCustom": "TODO",
+        "dxDiagram-categoryGeneral": "Algemeen",
+        "dxDiagram-categoryFlowchart": "Stroomschema",
+        "dxDiagram-categoryOrgChart": "Organigram",
+        "dxDiagram-categoryContainers": "Container",
+        "dxDiagram-categoryCustom": "Aangepast",
 
-        "dxDiagram-commandExportToSvg": "TODO",
-        "dxDiagram-commandExportToPng": "TODO",
-        "dxDiagram-commandExportToJpg": "TODO",
-        "dxDiagram-commandUndo": "TODO",
-        "dxDiagram-commandRedo": "TODO",
-        "dxDiagram-commandFontName": "TODO",
-        "dxDiagram-commandFontSize": "TODO",
-        "dxDiagram-commandBold": "TODO",
-        "dxDiagram-commandItalic": "TODO",
-        "dxDiagram-commandUnderline": "TODO",
-        "dxDiagram-commandTextColor": "TODO",
-        "dxDiagram-commandLineColor": "TODO",
-        "dxDiagram-commandLineWidth": "TODO",
-        "dxDiagram-commandLineStyle": "TODO",
-        "dxDiagram-commandLineStyleSolid": "TODO",
-        "dxDiagram-commandLineStyleDotted": "TODO",
-        "dxDiagram-commandLineStyleDashed": "TODO",
-        "dxDiagram-commandFillColor": "TODO",
-        "dxDiagram-commandAlignLeft": "TODO",
-        "dxDiagram-commandAlignCenter": "TODO",
-        "dxDiagram-commandAlignRight": "TODO",
-        "dxDiagram-commandConnectorLineType": "TODO",
-        "dxDiagram-commandConnectorLineStraight": "TODO",
-        "dxDiagram-commandConnectorLineOrthogonal": "TODO",
-        "dxDiagram-commandConnectorLineStart": "TODO",
-        "dxDiagram-commandConnectorLineEnd": "TODO",
-        "dxDiagram-commandConnectorLineNone": "TODO",
-        "dxDiagram-commandConnectorLineArrow": "TODO",
-        "dxDiagram-commandFullscreen": "TODO",
-        "dxDiagram-commandUnits": "TODO",
-        "dxDiagram-commandPageSize": "TODO",
-        "dxDiagram-commandPageOrientation": "TODO",
-        "dxDiagram-commandPageOrientationLandscape": "TODO",
-        "dxDiagram-commandPageOrientationPortrait": "TODO",
-        "dxDiagram-commandPageColor": "TODO",
-        "dxDiagram-commandShowGrid": "TODO",
-        "dxDiagram-commandSnapToGrid": "TODO",
-        "dxDiagram-commandGridSize": "TODO",
-        "dxDiagram-commandZoomLevel": "TODO",
-        "dxDiagram-commandAutoZoom": "TODO",
-        "dxDiagram-commandFitToContent": "TODO",
-        "dxDiagram-commandFitToWidth": "TODO",
-        "dxDiagram-commandAutoZoomByContent": "TODO",
-        "dxDiagram-commandAutoZoomByWidth": "TODO",
-        "dxDiagram-commandSimpleView": "TODO",
-        "dxDiagram-commandCut": "TODO",
-        "dxDiagram-commandCopy": "TODO",
-        "dxDiagram-commandPaste": "TODO",
-        "dxDiagram-commandSelectAll": "TODO",
-        "dxDiagram-commandDelete": "TODO",
-        "dxDiagram-commandBringToFront": "TODO",
-        "dxDiagram-commandSendToBack": "TODO",
-        "dxDiagram-commandLock": "TODO",
-        "dxDiagram-commandUnlock": "TODO",
-        "dxDiagram-commandInsertShapeImage": "TODO",
-        "dxDiagram-commandEditShapeImage": "TODO",
-        "dxDiagram-commandDeleteShapeImage": "TODO",
-        "dxDiagram-commandLayoutLeftToRight": "TODO",
-        "dxDiagram-commandLayoutRightToLeft": "TODO",
-        "dxDiagram-commandLayoutTopToBottom": "TODO",
-        "dxDiagram-commandLayoutBottomToTop": "TODO",
+        "dxDiagram-commandExportToSvg": "Exporteren naar SVG",
+        "dxDiagram-commandExportToPng": "Exporteren naar PNG",
+        "dxDiagram-commandExportToJpg": "Exporteren naar JPEG",
+        "dxDiagram-commandUndo": "Ongedaan Maken",
+        "dxDiagram-commandRedo": "Opnieuw Doen",
+        "dxDiagram-commandFontName": "Naam Lettertype",
+        "dxDiagram-commandFontSize": "Grootte Lettertype",
+        "dxDiagram-commandBold": "Vet",
+        "dxDiagram-commandItalic": "Cursief",
+        "dxDiagram-commandUnderline": "Onderlijnen",
+        "dxDiagram-commandTextColor": "Kleur Lettertype",
+        "dxDiagram-commandLineColor": "Lijnkleur",
+        "dxDiagram-commandLineWidth": "Lijndikte",
+        "dxDiagram-commandLineStyle": "Lijnstijl",
+        "dxDiagram-commandLineStyleSolid": "Volle lijn",
+        "dxDiagram-commandLineStyleDotted": "Stippellijn",
+        "dxDiagram-commandLineStyleDashed": "Streeplijn",
+        "dxDiagram-commandFillColor": "Vulkleur",
+        "dxDiagram-commandAlignLeft": "Links Uitlijnen",
+        "dxDiagram-commandAlignCenter": "Midden Uitlijnen",
+        "dxDiagram-commandAlignRight": "Rechts Uitlijnen",
+        "dxDiagram-commandConnectorLineType": "Verbindingslijn Type",
+        "dxDiagram-commandConnectorLineStraight": "Recht",
+        "dxDiagram-commandConnectorLineOrthogonal": "Orthogonaal",
+        "dxDiagram-commandConnectorLineStart": "Verbindingslijn Start",
+        "dxDiagram-commandConnectorLineEnd": "Verbindingslijn Einde",
+        "dxDiagram-commandConnectorLineNone": "Geen",
+        "dxDiagram-commandConnectorLineArrow": "Pijl",
+        "dxDiagram-commandFullscreen": "Volledig Scherm",
+        "dxDiagram-commandUnits": "Eenheden",
+        "dxDiagram-commandPageSize": "Paginaformaat",
+        "dxDiagram-commandPageOrientation": "Afdrukstand",
+        "dxDiagram-commandPageOrientationLandscape": "Liggend",
+        "dxDiagram-commandPageOrientationPortrait": "Staand",
+        "dxDiagram-commandPageColor": "Pagina Kleur",
+        "dxDiagram-commandShowGrid": "Toon Raster",
+        "dxDiagram-commandSnapToGrid": "Aan Raster Vastplakken",
+        "dxDiagram-commandGridSize": "Raster Grootte",
+        "dxDiagram-commandZoomLevel": "Zoom Level",
+        "dxDiagram-commandAutoZoom": "Auto Zoom",
+        "dxDiagram-commandFitToContent": "Aan Inhoud Aanpassen",
+        "dxDiagram-commandFitToWidth": "Aan Breedte Aanpassen",
+        "dxDiagram-commandAutoZoomByContent": "Auto Zoom aan Inhoud",
+        "dxDiagram-commandAutoZoomByWidth": "Auto Zoom aan Breedte",
+        "dxDiagram-commandSimpleView": "Simpele Weergave",
+        "dxDiagram-commandCut": "Knippen",
+        "dxDiagram-commandCopy": "Kopiëren",
+        "dxDiagram-commandPaste": "Plakken",
+        "dxDiagram-commandSelectAll": "Alles Selecteren",
+        "dxDiagram-commandDelete": "Verwijderen",
+        "dxDiagram-commandBringToFront": "Naar Voorgrond Brengen",
+        "dxDiagram-commandSendToBack": "Naar Achtergrond Sturen",
+        "dxDiagram-commandLock": "Vergrendelen",
+        "dxDiagram-commandUnlock": "Ontgrendelen",
+        "dxDiagram-commandInsertShapeImage": "Afbeelding Invoegen...",
+        "dxDiagram-commandEditShapeImage": "Afbeelding Wijzigen...",
+        "dxDiagram-commandDeleteShapeImage": "Afbeelding Verwijderen...",
+        "dxDiagram-commandLayoutLeftToRight": "Links-naar-rechts",
+        "dxDiagram-commandLayoutRightToLeft": "Rechts-naar-links",
+        "dxDiagram-commandLayoutTopToBottom": "Boven-naar-onder",
+        "dxDiagram-commandLayoutBottomToTop": "Onder-naar-boven",
 
-        "dxDiagram-unitIn": "TODO",
-        "dxDiagram-unitCm": "TODO",
-        "dxDiagram-unitPx": "TODO",
+        "dxDiagram-unitIn": "in",
+        "dxDiagram-unitCm": "cm",
+        "dxDiagram-unitPx": "px",
 
-        "dxDiagram-dialogButtonOK": "TODO",
-        "dxDiagram-dialogButtonCancel": "TODO",
-        "dxDiagram-dialogInsertShapeImageTitle": "TODO",
-        "dxDiagram-dialogEditShapeImageTitle": "TODO",
-        "dxDiagram-dialogEditShapeImageSelectButton": "TODO",
-        "dxDiagram-dialogEditShapeImageLabelText": "TODO",
+        "dxDiagram-dialogButtonOK": "OK",
+        "dxDiagram-dialogButtonCancel": "Annuleer",
+        "dxDiagram-dialogInsertShapeImageTitle": "Afbeelding Invoegen",
+        "dxDiagram-dialogEditShapeImageTitle": "Afbeelding Wijzigen",
+        "dxDiagram-dialogEditShapeImageSelectButton": "Afbeelding Selecteren",
+        "dxDiagram-dialogEditShapeImageLabelText": "of laat afbeelding hier vallen",
 
-        "dxDiagram-uiExport": "TODO",
-        "dxDiagram-uiProperties": "TODO",
-        "dxDiagram-uiSettings": "TODO",
-        "dxDiagram-uiShowToolbox": "TODO",
-        "dxDiagram-uiSearch": "TODO",
-        "dxDiagram-uiStyle": "TODO",
-        "dxDiagram-uiLayout": "TODO",
-        "dxDiagram-uiLayoutTree": "TODO",
-        "dxDiagram-uiLayoutLayered": "TODO",
-        "dxDiagram-uiDiagram": "TODO",
-        "dxDiagram-uiText": "TODO",
-        "dxDiagram-uiObject": "TODO",
-        "dxDiagram-uiConnector": "TODO",
-        "dxDiagram-uiPage": "TODO",
+        "dxDiagram-uiExport": "Exporteren",
+        "dxDiagram-uiProperties": "Eigenschappen",
+        "dxDiagram-uiSettings": "Instellingen",
+        "dxDiagram-uiShowToolbox": "Toon Toolbox",
+        "dxDiagram-uiSearch": "Zoeken",
+        "dxDiagram-uiStyle": "Stijl",
+        "dxDiagram-uiLayout": "Lay-out",
+        "dxDiagram-uiLayoutTree": "Boom",
+        "dxDiagram-uiLayoutLayered": "Gelaagd",
+        "dxDiagram-uiDiagram": "Diagram",
+        "dxDiagram-uiText": "Tekst",
+        "dxDiagram-uiObject": "Object",
+        "dxDiagram-uiConnector": "Verbinding",
+        "dxDiagram-uiPage": "Pagina",
 
-        "dxDiagram-shapeText": "TODO",
-        "dxDiagram-shapeRectangle": "TODO",
-        "dxDiagram-shapeEllipse": "TODO",
-        "dxDiagram-shapeCross": "TODO",
-        "dxDiagram-shapeTriangle": "TODO",
-        "dxDiagram-shapeDiamond": "TODO",
-        "dxDiagram-shapeHeart": "TODO",
-        "dxDiagram-shapePentagon": "TODO",
-        "dxDiagram-shapeHexagon": "TODO",
-        "dxDiagram-shapeOctagon": "TODO",
-        "dxDiagram-shapeStar": "TODO",
-        "dxDiagram-shapeArrowLeft": "TODO",
-        "dxDiagram-shapeArrowUp": "TODO",
-        "dxDiagram-shapeArrowRight": "TODO",
-        "dxDiagram-shapeArrowDown": "TODO",
-        "dxDiagram-shapeArrowUpDown": "TODO",
-        "dxDiagram-shapeArrowLeftRight": "TODO",
-        "dxDiagram-shapeProcess": "TODO",
-        "dxDiagram-shapeDecision": "TODO",
-        "dxDiagram-shapeTerminator": "TODO",
-        "dxDiagram-shapePredefinedProcess": "TODO",
-        "dxDiagram-shapeDocument": "TODO",
-        "dxDiagram-shapeMultipleDocuments": "TODO",
-        "dxDiagram-shapeManualInput": "TODO",
-        "dxDiagram-shapePreparation": "TODO",
-        "dxDiagram-shapeData": "TODO",
-        "dxDiagram-shapeDatabase": "TODO",
-        "dxDiagram-shapeHardDisk": "TODO",
-        "dxDiagram-shapeInternalStorage": "TODO",
-        "dxDiagram-shapePaperTape": "TODO",
-        "dxDiagram-shapeManualOperation": "TODO",
-        "dxDiagram-shapeDelay": "TODO",
-        "dxDiagram-shapeStoredData": "TODO",
-        "dxDiagram-shapeDisplay": "TODO",
-        "dxDiagram-shapeMerge": "TODO",
-        "dxDiagram-shapeConnector": "TODO",
-        "dxDiagram-shapeOr": "TODO",
-        "dxDiagram-shapeSummingJunction": "TODO",
-        "dxDiagram-shapeContainerDefaultText": "TODO",
-        "dxDiagram-shapeVerticalContainer": "TODO",
-        "dxDiagram-shapeHorizontalContainer": "TODO",
-        "dxDiagram-shapeCardDefaultText": "TODO",
-        "dxDiagram-shapeCardWithImageOnLeft": "TODO",
-        "dxDiagram-shapeCardWithImageOnTop": "TODO",
-        "dxDiagram-shapeCardWithImageOnRight": "TODO",
+        "dxDiagram-shapeText": "Tekst",
+        "dxDiagram-shapeRectangle": "Rechthoek",
+        "dxDiagram-shapeEllipse": "Ovaal",
+        "dxDiagram-shapeCross": "Kruis",
+        "dxDiagram-shapeTriangle": "Driehoek",
+        "dxDiagram-shapeDiamond": "Ruit",
+        "dxDiagram-shapeHeart": "Hart",
+        "dxDiagram-shapePentagon": "Vijfhoek",
+        "dxDiagram-shapeHexagon": "Zeshoek",
+        "dxDiagram-shapeOctagon": "Achthoek",
+        "dxDiagram-shapeStar": "Ster",
+        "dxDiagram-shapeArrowLeft": "Pijl Links",
+        "dxDiagram-shapeArrowUp": "Pijl Omhoog",
+        "dxDiagram-shapeArrowRight": "Pijl Rechts",
+        "dxDiagram-shapeArrowDown": "Pijl Omlaag",
+        "dxDiagram-shapeArrowUpDown": "Pijl Omhoog Rechts",
+        "dxDiagram-shapeArrowLeftRight": "Pijl Links Rechts",
+        "dxDiagram-shapeProcess": "Proces",
+        "dxDiagram-shapeDecision": "Beslissing",
+        "dxDiagram-shapeTerminator": "Afsluiter",
+        "dxDiagram-shapePredefinedProcess": "VoorafgedefinieerdPproces",
+        "dxDiagram-shapeDocument": "Document",
+        "dxDiagram-shapeMultipleDocuments": "Meerdere Documenten",
+        "dxDiagram-shapeManualInput": "Handmatige invoer",
+        "dxDiagram-shapePreparation": "Voorbereiding",
+        "dxDiagram-shapeData": "Data",
+        "dxDiagram-shapeDatabase": "Database",
+        "dxDiagram-shapeHardDisk": "Harde Schijf",
+        "dxDiagram-shapeInternalStorage": "Interne Opslag",
+        "dxDiagram-shapePaperTape": "Papiertape",
+        "dxDiagram-shapeManualOperation": "Handmatige Operatie",
+        "dxDiagram-shapeDelay": "Vertraging",
+        "dxDiagram-shapeStoredData": "Opgeslagen gegevens",
+        "dxDiagram-shapeDisplay": "Weergave",
+        "dxDiagram-shapeMerge": "Samenvoegen",
+        "dxDiagram-shapeConnector": "Verbinding",
+        "dxDiagram-shapeOr": "Of",
+        "dxDiagram-shapeSummingJunction": "Sommeerpunt",
+        "dxDiagram-shapeContainerDefaultText": "Container",
+        "dxDiagram-shapeVerticalContainer": "Verticale Container",
+        "dxDiagram-shapeHorizontalContainer": "Horizontale Container",
+        "dxDiagram-shapeCardDefaultText": "Persoonsnaam",
+        "dxDiagram-shapeCardWithImageOnLeft": "Kaart met Afbeelding Links",
+        "dxDiagram-shapeCardWithImageOnTop": "Kaart met Afbeelding Bovenaan",
+        "dxDiagram-shapeCardWithImageOnRight": "Kaart met Afbeelding Rechts",
 
-        "dxGantt-dialogTitle": "TODO",
-        "dxGantt-dialogStartTitle": "TODO",
-        "dxGantt-dialogEndTitle": "TODO",
-        "dxGantt-dialogProgressTitle": "TODO",
-        "dxGantt-dialogResourcesTitle": "TODO",
-        "dxGantt-dialogResourceManagerTitle": "TODO",
-        "dxGantt-dialogTaskDetailsTitle": "TODO",
+        "dxGantt-dialogTitle": "Titel",
+        "dxGantt-dialogStartTitle": "Start",
+        "dxGantt-dialogEndTitle": "Einde",
+        "dxGantt-dialogProgressTitle": "Vooruitgang",
+        "dxGantt-dialogResourcesTitle": "Middelen",
+        "dxGantt-dialogResourceManagerTitle": "Resource Manager",
+        "dxGantt-dialogTaskDetailsTitle": "Details Taak",
         "dxGantt-dialogEditResourceListHint": "TODO",
         "dxGantt-dialogEditNoResources": "TODO",
         "dxGantt-dialogButtonAdd": "TODO",
