Apply suggestions from code review
Co-authored-by: Vladimir Kovalev <47112293+vladkovl@users.noreply.github.com>

--- a/js/localization/messages/ru.json
+++ b/js/localization/messages/ru.json
@@ -298,7 +298,7 @@
         "dxFileManager-dialogDeleteItemTitle": "Удаление элемента",
         "dxFileManager-dialogDeleteItemButtonText": "Удалить",
         "dxFileManager-dialogDeleteItemSingleItemConfirmation": "Вы действительно хотите удалить {0}?",
-        "dxFileManager-dialogDeleteItemMultipleItemsConfirmation": "Вы действительно хотите удалить {0}",
+        "dxFileManager-dialogDeleteItemMultipleItemsConfirmation": "Вы действительно хотите удалить {0} элементов?",
 
         "dxFileManager-editingCreateSingleItemProcessingMessage": "Создаётся папка в {0}",
         "dxFileManager-editingCreateSingleItemSuccessMessage": "Создана папка в {0}",
@@ -515,14 +515,14 @@
         "dxGantt-dialogCancelOperationMessage": "Отменить операцию",
         "dxGantt-dialogDeleteDependencyMessage": "Удалить задачу",
         "dxGantt-dialogMoveTaskAndKeepDependencyMessage": "Сохранить зависимость и передвинуть задачу",
-        "dxGantt-undo": "Отменить операцию",
-        "dxGantt-redo": "Повторить операцию",
+        "dxGantt-undo": "Отменить",
+        "dxGantt-redo": "Повторить",
         "dxGantt-expandAll": "Развернуть все",
         "dxGantt-collapseAll": "Свернуть все",
         "dxGantt-addNewTask": "Создать новую задачу",
         "dxGantt-deleteSelectedTask": "Удалить выделенную задачу",
         "dxGantt-zoomIn": "Увеличить масштаб",
         "dxGantt-zoomOut": "Уменьшить масштаб",
-        "dxGantt-fullScreen": "Раскрыть во весь экран"
+        "dxGantt-fullScreen": "Полноэкранный режим"
     }
 }
