--- a/js/localization/messages/ru.json
+++ b/js/localization/messages/ru.json
@@ -519,7 +519,7 @@
         "dxGantt-redo": "Повторить",
         "dxGantt-expandAll": "Развернуть все",
         "dxGantt-collapseAll": "Свернуть все",
-        "dxGantt-addNewTask": "Создать новую задачу",
+        "dxGantt-addNewTask": "Добавить новую задачу",
         "dxGantt-deleteSelectedTask": "Удалить выделенную задачу",
         "dxGantt-zoomIn": "Увеличить масштаб",
         "dxGantt-zoomOut": "Уменьшить масштаб",
