--- a/js/localization/messages/en.json
+++ b/js/localization/messages/en.json
@@ -375,7 +375,7 @@
         "dxFileManager-editingUploadMultipleItemsErrorMessage": "{0} items were not uploaded",
         "dxFileManager-editingUploadCanceledMessage": "Canceled",
 
-        "dxFileManager-editingGetItemContentSingleItemErrorMessage": "Can not open folder '{0}'",
+        "dxFileManager-editingGetItemContentSingleItemErrorMessage": "The folder cannot be opened",
 
         "dxFileManager-listDetailsColumnCaptionName": "Name",
         "dxFileManager-listDetailsColumnCaptionDateModified": "Date Modified",
