Fix German and Japanese localization

--- a/js/localization/messages/en.json
+++ b/js/localization/messages/en.json
@@ -194,7 +194,7 @@
         "dxScheduler-openAppointment": "Open appointment",
 
         "dxScheduler-recurrenceNever": "Never",
-        "dxScheduler-recurrenceMinutely": "Minutely",
+        "dxScheduler-recurrenceMinutely": "Every minute",
         "dxScheduler-recurrenceHourly": "Hourly",
         "dxScheduler-recurrenceDaily": "Daily",
         "dxScheduler-recurrenceWeekly": "Weekly",
