--- a/js/localization/messages/ja.json
+++ b/js/localization/messages/ja.json
@@ -176,8 +176,8 @@
         "dxScheduler-editorLabelRecurrence": "繰り返し",
         "dxScheduler-openAppointment": "オープンの予定",
         "dxScheduler-recurrenceNever": "無効",
-        "dxScheduler-recurrenceMinutely": "TODO!",
-        "dxScheduler-recurrenceHourly": "TODO!",
+        "dxScheduler-recurrenceMinutely": "分ごと",
+        "dxScheduler-recurrenceHourly": "1時間ごと",
         "dxScheduler-recurrenceDaily": "日間毎日",
         "dxScheduler-recurrenceWeekly": "毎週",
         "dxScheduler-recurrenceMonthly": "毎月",
@@ -187,8 +187,8 @@
         "dxScheduler-recurrenceEnd": "リピートの終了日",
         "dxScheduler-recurrenceAfter": "次の発生回数後に終了",
         "dxScheduler-recurrenceOn": "リピート解除の日付",
-        "dxScheduler-recurrenceRepeatMinutely": "TODO!",
-        "dxScheduler-recurrenceRepeatHourly": "TODO!",
+        "dxScheduler-recurrenceRepeatMinutely": "分ごと",
+        "dxScheduler-recurrenceRepeatHourly": "時間ごと",
         "dxScheduler-recurrenceRepeatDaily": "日後",
         "dxScheduler-recurrenceRepeatWeekly": "週間後",
         "dxScheduler-recurrenceRepeatMonthly": "カ月後",
@@ -277,8 +277,8 @@
 
         "dxFileManager-commandCreate": "新しいディレクトリ",
         "dxFileManager-commandRename": "名前の変更",
-        "dxFileManager-commandMove": "TODO",
-        "dxFileManager-commandCopy": "TODO",
+        "dxFileManager-commandMove": "移動先",
+        "dxFileManager-commandCopy": "コピー先",
         "dxFileManager-commandDelete": "削除",
         "dxFileManager-commandDownload": "ダウンロード",
         "dxFileManager-commandUpload": "ファイルのアップロード",
@@ -287,18 +287,18 @@
         "dxFileManager-commandDetails": "詳細表示",
         "dxFileManager-commandClearSelection": "選択のクリア",
 
-        "dxFileManager-dialogDirectoryChooserMoveTitle": "TODO",
+        "dxFileManager-dialogDirectoryChooserMoveTitle": "移動先",
         "dxFileManager-dialogDirectoryChooserMoveButtonText": "移動",
-        "dxFileManager-dialogDirectoryChooserCopyTitle": "TODO",
+        "dxFileManager-dialogDirectoryChooserCopyTitle": "コピー先",
         "dxFileManager-dialogDirectoryChooserCopyButtonText": "コピー",
         "dxFileManager-dialogRenameItemTitle": "名前の変更",
         "dxFileManager-dialogRenameItemButtonText": "保存",
         "dxFileManager-dialogCreateDirectoryTitle": "新しいディレクトリ",
         "dxFileManager-dialogCreateDirectoryButtonText": "作成",
-        "dxFileManager-dialogDeleteItemTitle": "TODO",
-        "dxFileManager-dialogDeleteItemButtonText": "TODO",
-        "dxFileManager-dialogDeleteItemSingleItemConfirmation": "TODO",
-        "dxFileManager-dialogDeleteItemMultipleItemsConfirmation": "TODO",
+        "dxFileManager-dialogDeleteItemTitle": "削除",
+        "dxFileManager-dialogDeleteItemButtonText": "削除",
+        "dxFileManager-dialogDeleteItemSingleItemConfirmation": "{0} を削除しますか?",
+        "dxFileManager-dialogDeleteItemMultipleItemsConfirmation": "{0} アイテムを削除しますか?",
         "dxFileManager-dialogButtonCancel": "キャンセル",
 
         "dxFileManager-editingCreateSingleItemProcessingMessage": "{0} 内にディレクトリを作成中",
@@ -516,14 +516,14 @@
         "dxGantt-dialogCancelOperationMessage": "操作をキャンセルする",
         "dxGantt-dialogDeleteDependencyMessage": "依存関係を削除する",
         "dxGantt-dialogMoveTaskAndKeepDependencyMessage": "タスクを移動して、依存関係を保持する",
-        "dxGantt-undo": "TODO",
-        "dxGantt-redo": "TODO",
-        "dxGantt-expandAll": "TODO",
-        "dxGantt-collapseAll": "TODO",
-        "dxGantt-addNewTask": "TODO",
-        "dxGantt-deleteSelectedTask": "TODO",
-        "dxGantt-zoomIn": "TODO",
-        "dxGantt-zoomOut": "TODO",
-        "dxGantt-fullScreen": "TODO"
+        "dxGantt-undo": "元に戻す",
+        "dxGantt-redo": "やり直し",
+        "dxGantt-expandAll": "すべて展開",
+        "dxGantt-collapseAll": "すべて折りたたむ",
+        "dxGantt-addNewTask": "新しいタスクの追加",
+        "dxGantt-deleteSelectedTask": "選択したタスクを削除",
+        "dxGantt-zoomIn": "拡大",
+        "dxGantt-zoomOut": "縮小",
+        "dxGantt-fullScreen": "全画面表示"
     }
 }
