--- a/js/localization/messages/ja.json
+++ b/js/localization/messages/ja.json
@@ -182,7 +182,7 @@
         "dxScheduler-recurrenceWeekly": "毎週",
         "dxScheduler-recurrenceMonthly": "毎月",
         "dxScheduler-recurrenceYearly": "毎年",
-        "dxScheduler-recurrenceRepeatEvery": "間隔:",
+        "dxScheduler-recurrenceRepeatEvery": "繰り返し間隔",
         "dxScheduler-recurrenceRepeatOn": "この日に繰り返す",
         "dxScheduler-recurrenceEnd": "リピートの終了日",
         "dxScheduler-recurrenceAfter": "次の発生回数後に終了",
