--- a/js/localization/messages/ru.json
+++ b/js/localization/messages/ru.json
@@ -274,6 +274,8 @@
         "dxFileManager-errorInvalidSymbols": "Введённое имя содержит недопустимые символы.",
         "dxFileManager-errorDefault": "Неизвестная ошибка",
 
+        "dxFileManager-errorDirectoryOpenFailed": "Не удалось открыть папку",
+
         "dxFileManager-commandCreate": "Новая папка",
         "dxFileManager-commandRename": "Переименовать",
         "dxFileManager-commandMove": "Переместить в",
