--- a/js/localization/messages/en.json
+++ b/js/localization/messages/en.json
@@ -307,6 +307,8 @@
         "dxFileManager-errorInvalidSymbols": "This name contains invalid characters.",
         "dxFileManager-errorDefault": "Unspecified error.",
 
+        "dxFileManager-errorDirectoryOpenFailed": "The folder cannot be opened",
+
         "dxFileManager-commandCreate": "New directory",
         "dxFileManager-commandRename": "Rename",
         "dxFileManager-commandMove": "Move to",
