Added all captions for Dutch language

--- a/js/localization/messages/nl.json
+++ b/js/localization/messages/nl.json
@@ -295,13 +295,13 @@
         "dxHtmlEditor-heading": "Titel",
         "dxHtmlEditor-normalText": "Normale tekst",
 
-        "dxFileManager-newDirectoryName": "TODO",
+        "dxFileManager-newDirectoryName": "Naamloze Map",
         "dxFileManager-rootDirectoryName": "Bestanden",
         "dxFileManager-errorNoAccess": "Toegang geweigerd. Deze handeling kan niet worden uitgevoerd.",
-        "dxFileManager-errorDirectoryExistsFormat": "TODO",
+        "dxFileManager-errorDirectoryExistsFormat": "Map '{0}' bestaat al",
         "dxFileManager-errorFileExistsFormat": "Bestand '{0}' besaat al.",
         "dxFileManager-errorFileNotFoundFormat": "Bestand '{0}' niet gevonden.",
-        "dxFileManager-errorDirectoryNotFoundFormat": "TODO",
+        "dxFileManager-errorDirectoryNotFoundFormat": "Map '{0}' niet gevonden.",
         "dxFileManager-errorWrongFileExtension": "Bestand's extensie is niet toegelaten.",
         "dxFileManager-errorMaxFileSizeExceeded": "Bestand's grootte overschrijdt de maximum toegelaten grootte.",
         "dxFileManager-errorInvalidSymbols": "Deze naam bevat ongeldige karakters.",
@@ -454,29 +454,29 @@
         "dxGantt-dialogResourcesTitle": "Middelen",
         "dxGantt-dialogResourceManagerTitle": "Resource Manager",
         "dxGantt-dialogTaskDetailsTitle": "Details Taak",
-        "dxGantt-dialogEditResourceListHint": "TODO",
-        "dxGantt-dialogEditNoResources": "TODO",
-        "dxGantt-dialogButtonAdd": "TODO",
-        "dxGantt-contextMenuNewTask": "TODO",
-        "dxGantt-contextMenuNewSubtask": "TODO",
-        "dxGantt-contextMenuDeleteTask": "TODO",
-        "dxGantt-contextMenuDeleteDependency": "TODO",
-        "dxGantt-dialogTaskDeleteConfirmation": "TODO",
-        "dxGantt-dialogDependencyDeleteConfirmation": "TODO",
-        "dxGantt-dialogResourcesDeleteConfirmation": "TODO",
-        "dxGantt-dialogConstraintCriticalViolationMessage": "TODO",
-        "dxGantt-dialogConstraintViolationMessage": "TODO",
-        "dxGantt-dialogCancelOperationMessage": "TODO",
-        "dxGantt-dialogDeleteDependencyMessage": "TODO",
-        "dxGantt-dialogMoveTaskAndKeepDependencyMessage": "TODO",
-        "dxGantt-undo": "TODO",
-        "dxGantt-redo": "TODO",
-        "dxGantt-expandAll": "TODO",
-        "dxGantt-collapseAll": "TODO",
-        "dxGantt-addNewTask": "TODO",
-        "dxGantt-deleteSelectedTask": "TODO",
-        "dxGantt-zoomIn": "TODO",
-        "dxGantt-zoomOut": "TODO",
-        "dxGantt-fullScreen": "TODO"
+        "dxGantt-dialogEditResourceListHint": "Bewerk Lijst Middelen",
+        "dxGantt-dialogEditNoResources": "Geen Middelen",
+        "dxGantt-dialogButtonAdd": "Toevoegen",
+        "dxGantt-contextMenuNewTask": "Nieuwe Taak",
+        "dxGantt-contextMenuNewSubtask": "Nieuwe Subtaak",
+        "dxGantt-contextMenuDeleteTask": "Verwijder Taak",
+        "dxGantt-contextMenuDeleteDependency": "Verwijder Verbinding",
+        "dxGantt-dialogTaskDeleteConfirmation": "Het verwijderen van een taak verwijdert ook zijn verbindingen en subtaken. Bent u zeker dat u deze taak wilt verwijderen?",
+        "dxGantt-dialogDependencyDeleteConfirmation": "Bent u zeker dat u de verbinding van deze taak wilt verbreken?",
+        "dxGantt-dialogResourcesDeleteConfirmation": "Het verwijderen van een middel verwijdert deze ook van de taak waar deze bij verbonden staat. Bent u zeker dat u dit middel wil verwijderen? Middel: {0}",
+        "dxGantt-dialogConstraintCriticalViolationMessage": "De taak die je probeert te verplaatsen is gelinked aan een tweede taak door een verbinding. Deze verandering conflicteerd met de verbindgsregels. Hoe wilt u verdergaan?",
+        "dxGantt-dialogConstraintViolationMessage": "De taak die je probeert te verplaatsen is gelinked aan een tweede taak door een verbinding. Hoe wilt u verdergaan?",
+        "dxGantt-dialogCancelOperationMessage": "Operatie Annuleren",
+        "dxGantt-dialogDeleteDependencyMessage": "Verwijder Verbinding",
+        "dxGantt-dialogMoveTaskAndKeepDependencyMessage": "Verplaats de taak en behoudt de verbinding",
+        "dxGantt-undo": "Ongedaan Maken",
+        "dxGantt-redo": "Opnieuw Doen",
+        "dxGantt-expandAll": "Alles Uitklappen",
+        "dxGantt-collapseAll": "Alles Inklappen",
+        "dxGantt-addNewTask": "Voeg Nieuwe Taak Toe",
+        "dxGantt-deleteSelectedTask": "Verwijder Geselecteerde Taak",
+        "dxGantt-zoomIn": "Zoom In",
+        "dxGantt-zoomOut": "Zoom Out",
+        "dxGantt-fullScreen": "Volledig Scherm"
     }
 }
