Update Column Chooser to korean

--- a/js/localization/messages/kr.json
+++ b/js/localization/messages/kr.json
@@ -1,5 +1,5 @@
 {
-    "en": {
+    "kr": {
         "Yes": "예",
         "No": "아니오",
         "Cancel": "취소",
@@ -81,7 +81,7 @@
         "dxNumberBox-invalidValueMessage": "값은 반드시 숫자여야 합니다",
         "dxNumberBox-noDataText": "데이터가 없습니다",
 
-        "dxDataGrid-columnChooserTitle": "Column Chooser",
+        "dxDataGrid-columnChooserTitle": "열 선택기",
         "dxDataGrid-columnChooserEmptyText": "여기에 드래그하여 숨기기",
         "dxDataGrid-groupContinuesMessage": "다음 페이지에 계속",
         "dxDataGrid-groupContinuedMessage": "이전 페이지에 계속",
