--- a/js/localization/messages/en.json
+++ b/js/localization/messages/en.json
@@ -306,8 +306,7 @@
         "dxFileManager-errorMaxFileSizeExceeded": "File size exceeds the maximum allowed size.",
         "dxFileManager-errorInvalidSymbols": "This name contains invalid characters.",
         "dxFileManager-errorDefault": "Unspecified error.",
-
-        "dxFileManager-errorDirectoryOpenFailed": "The folder cannot be opened",
+        "dxFileManager-errorDirectoryOpenFailed": "The directory cannot be opened",
 
         "dxFileManager-commandCreate": "New directory",
         "dxFileManager-commandRename": "Rename",
