--- a/js/localization/messages/fr.json
+++ b/js/localization/messages/fr.json
@@ -306,6 +306,7 @@
         "dxFileManager-errorMaxFileSizeExceeded": "Taille du fichier dépasse la limite maximum permise.",
         "dxFileManager-errorInvalidSymbols": "Ce nom contient des caractères invalides.",
         "dxFileManager-errorDefault": "Erreur non spécifié.",
+        "dxFileManager-errorDirectoryOpenFailed": "TODO",
 
         "dxFileManager-commandCreate": "Nouveau répertoire",
         "dxFileManager-commandRename": "Renommer",
