--- a/js/localization/messages/pt.json
+++ b/js/localization/messages/pt.json
@@ -273,6 +273,7 @@
         "dxFileManager-errorMaxFileSizeExceeded": "TODO",
         "dxFileManager-errorInvalidSymbols": "TODO",
         "dxFileManager-errorDefault": "TODO",
+        "dxFileManager-errorDirectoryOpenFailed": "TODO",
 
         "dxDiagram-categoryGeneral": "TODO",
         "dxDiagram-categoryFlowchart": "TODO",
