--- a/js/localization/messages/nl.json
+++ b/js/localization/messages/nl.json
@@ -169,8 +169,8 @@
         "dxPivotGrid-showFieldChooser": "Toon Veldenkiezer",
         "dxPivotGrid-expandAll": "Alle Uitklappen",
         "dxPivotGrid-collapseAll": "Alle Inklappen",
-        "dxPivotGrid-sortColumnBySummary": "Sorteer \"{0}\" op Deze Kolom",
-        "dxPivotGrid-sortRowBySummary": "Sorteer \"{0}\" op Deze Rij",
+        "dxPivotGrid-sortColumnBySummary": "Sorteer \"{0}\" op deze Kolom",
+        "dxPivotGrid-sortRowBySummary": "Sorteer \"{0}\" op deze Rij",
         "dxPivotGrid-removeAllSorting": "Verwijderen Alle Sorteringen",
         "dxPivotGrid-dataNotAvailable": "N/B",
         "dxPivotGrid-rowFields": "Rijvelden",
@@ -189,7 +189,7 @@
         "dxScheduler-editorLabelDescription": "Omschrijving",
         "dxScheduler-editorLabelRecurrence": "Herhalen",
 
-        "dxScheduler-openAppointment": "Afspraak openen",
+        "dxScheduler-openAppointment": "Afspraak Openen",
 
         "dxScheduler-recurrenceNever": "Nooit",
         "dxScheduler-recurrenceDaily": "Dagelijks",
@@ -198,7 +198,7 @@
         "dxScheduler-recurrenceYearly": "Jaarlijks",
 
         "dxScheduler-recurrenceRepeatEvery": "Elke",
-        "dxScheduler-recurrenceRepeatOn": "Repeat On",
+        "dxScheduler-recurrenceRepeatOn": "Herhaal Op",
         "dxScheduler-recurrenceEnd": "Einde herhaling",
         "dxScheduler-recurrenceAfter": "Na",
         "dxScheduler-recurrenceOn": "Op",
@@ -224,7 +224,7 @@
         "dxScheduler-recurrenceRepeatCount": "keer",
         "dxScheduler-allDay": "Duurt hele dag",
 
-        "dxScheduler-confirmRecurrenceEditMessage": "Alleen deze afspraak of de hele serie wijzigen?",
+        "dxScheduler-confirmRecurrenceEditMessage": "Alleen deze afspraak of de volledige serie wijzigen?",
         "dxScheduler-confirmRecurrenceDeleteMessage": "Alleen deze afspraak of de volledige serie verwijderen?",
 
         "dxScheduler-confirmRecurrenceEditSeries": "Serie wijzigen",
@@ -287,6 +287,191 @@
         "dxHtmlEditor-dialogImageWidthField": "Breedte (px)",
         "dxHtmlEditor-dialogImageHeightField": "Hoogte (px)",
         "dxHtmlEditor-heading": "Titel",
-        "dxHtmlEditor-normalText": "Normale tekst"
+        "dxHtmlEditor-normalText": "Normale tekst",
+
+        "dxFileManager-newDirectoryName": "Nieuwe folder",
+        "dxFileManager-rootDirectoryName": "Bestanden",
+        "dxFileManager-errorNoAccess": "Geen toegang. Operatie afgebroken.",
+        "dxFileManager-errorDirectoryExistsFormat": "Folder '{0}' bestaat al.",
+        "dxFileManager-errorFileExistsFormat": "Bestand '{0}' bestaat al.",
+        "dxFileManager-errorFileNotFoundFormat": "Bestand '{0}' niet gevonden.",
+        "dxFileManager-errorDirectoryNotFoundFormat": "Folder '{0}' bestaat al.",
+        "dxFileManager-errorWrongFileExtension": "Deze bestandsextensie is niet toegestaan.",
+        "dxFileManager-errorMaxFileSizeExceeded": "De bestandsgrootte overschrijdt de toegstane limiet",
+        "dxFileManager-errorInvalidSymbols": "Deze naam bevat ongeldige tekens.",
+        "dxFileManager-errorDefault": "Er is ongedefinieerde fout opgetreden",
+        "dxFileManager-errorDirectoryOpenFailed": "De folder kan niet geopend worden",
+
+        "dxDiagram-categoryGeneral": "Algemeen",
+        "dxDiagram-categoryFlowchart": "Flowchart",
+        "dxDiagram-categoryOrgChart": "OrgChart",
+        "dxDiagram-categoryContainers": "Container",
+        "dxDiagram-categoryCustom": "Aangepast",
+
+        "dxDiagram-commandExportToSvg": "Exporteer naar SVG",
+        "dxDiagram-commandExportToPng": "Exporteer naar PNG",
+        "dxDiagram-commandExportToJpg": "Exporteer naar JPEG",
+        "dxDiagram-commandUndo": "Ongedaan maken",
+        "dxDiagram-commandRedo": "Opnieuw doen",
+        "dxDiagram-commandFontName": "Lettertype",
+        "dxDiagram-commandFontSize": "Lettergrootte",
+        "dxDiagram-commandBold": "Vet",
+        "dxDiagram-commandItalic": "Cursief",
+        "dxDiagram-commandUnderline": "Onderstreept",
+        "dxDiagram-commandTextColor": "Letterkleur",
+        "dxDiagram-commandLineColor": "Lijnkleur",
+        "dxDiagram-commandLineWidth": "Lijndikte",
+        "dxDiagram-commandLineStyle": "Lijnstijl",
+        "dxDiagram-commandLineStyleSolid": "Volle lijn",
+        "dxDiagram-commandLineStyleDotted": "Gestippeld",
+        "dxDiagram-commandLineStyleDashed": "Gestreept",
+        "dxDiagram-commandFillColor": "Vulkleur",
+        "dxDiagram-commandAlignLeft": "Links uitlijnen",
+        "dxDiagram-commandAlignCenter": "Centreren",
+        "dxDiagram-commandAlignRight": "Rechts uitlijnen",
+        "dxDiagram-commandConnectorLineType": "Verbindingslijn type",
+        "dxDiagram-commandConnectorLineStraight": "Recht",
+        "dxDiagram-commandConnectorLineOrthogonal": "Orthogonaal",
+        "dxDiagram-commandConnectorLineStart": "Verbindingslijn Start",
+        "dxDiagram-commandConnectorLineEnd": "Verbindingslijn Eind",
+        "dxDiagram-commandConnectorLineNone": "Geen",
+        "dxDiagram-commandConnectorLineArrow": "Pijl",
+        "dxDiagram-commandFullscreen": "Volledige schermweergave",
+        "dxDiagram-commandUnits": "Eenheden",
+        "dxDiagram-commandPageSize": "Pagina grootte",
+        "dxDiagram-commandPageOrientation": "Orientatie",
+        "dxDiagram-commandPageOrientationLandscape": "Landschap",
+        "dxDiagram-commandPageOrientationPortrait": "Portrait",
+        "dxDiagram-commandPageColor": "Pagina kleur",
+        "dxDiagram-commandShowGrid": "Toon raster",
+        "dxDiagram-commandSnapToGrid": "Plak aan raster",
+        "dxDiagram-commandGridSize": "Raster grootte",
+        "dxDiagram-commandZoomLevel": "Zoom niveau",
+        "dxDiagram-commandAutoZoom": "Automatische zoom",
+        "dxDiagram-commandFitToContent": "Aan inhoud aanpassen",
+        "dxDiagram-commandFitToWidth": "Aan breedte aanpassen",
+        "dxDiagram-commandAutoZoomByContent": "Automatisch aan inhoud aanpassen",
+        "dxDiagram-commandAutoZoomByWidth": "Automatisch aan breedte aanpassen",
+        "dxDiagram-commandSimpleView": "Eenvoudige weergave",
+        "dxDiagram-commandCut": "Knippen",
+        "dxDiagram-commandCopy": "Kopiëren",
+        "dxDiagram-commandPaste": "Plakken",
+        "dxDiagram-commandSelectAll": "Alles selecteren",
+        "dxDiagram-commandDelete": "Verwijderen",
+        "dxDiagram-commandBringToFront": "Naar voorgrond",
+        "dxDiagram-commandSendToBack": "Naar achtergrond",
+        "dxDiagram-commandLock": "Vergrendelen",
+        "dxDiagram-commandUnlock": "Ontgrendelen",
+        "dxDiagram-commandInsertShapeImage": "Afbeeldingsobject invoegen",
+        "dxDiagram-commandEditShapeImage": "Afbeeldingsobject aanpassen",
+        "dxDiagram-commandDeleteShapeImage": "Afbeeldingsobject verwijderen",
+        "dxDiagram-commandLayoutLeftToRight": "Links-naar-rechts",
+        "dxDiagram-commandLayoutRightToLeft": "Rechts-naar-links",
+        "dxDiagram-commandLayoutTopToBottom": "Boven-naar-beneden",
+        "dxDiagram-commandLayoutBottomToTop": "Benede-naar-boven",
+
+        "dxDiagram-unitIn": "in",
+        "dxDiagram-unitCm": "cm",
+        "dxDiagram-unitPx": "px",
+
+        "dxDiagram-dialogButtonOK": "OK",
+        "dxDiagram-dialogButtonCancel": "Annuleren",
+        "dxDiagram-dialogInsertShapeImageTitle": "Afbeelding Invoegen",
+        "dxDiagram-dialogEditShapeImageTitle": "Afbeelding Aanpassen",
+        "dxDiagram-dialogEditShapeImageSelectButton": "Selecteer afbeelding",
+        "dxDiagram-dialogEditShapeImageLabelText": "of sleep de afbeelding hier",
+
+        "dxDiagram-uiExport": "Exporteren",
+        "dxDiagram-uiProperties": "Eigenschappen",
+        "dxDiagram-uiSettings": "Instellingen",
+        "dxDiagram-uiShowToolbox": "Gereedschapskist",
+        "dxDiagram-uiSearch": "Zoeken",
+        "dxDiagram-uiStyle": "Stijl",
+        "dxDiagram-uiLayout": "Opmaak",
+        "dxDiagram-uiLayoutTree": "Opmaakboom",
+        "dxDiagram-uiLayoutLayered": "Gelaagde opmaak",
+        "dxDiagram-uiDiagram": "Diagram",
+        "dxDiagram-uiText": "Tekst",
+        "dxDiagram-uiObject": "Object",
+        "dxDiagram-uiConnector": "Verbinding",
+        "dxDiagram-uiPage": "Pagina",
+
+        "dxDiagram-shapeText": "Tekst",
+        "dxDiagram-shapeRectangle": "Rechthoek",
+        "dxDiagram-shapeEllipse": "Ovaal",
+        "dxDiagram-shapeCross": "Kruis",
+        "dxDiagram-shapeTriangle": "Driehoek",
+        "dxDiagram-shapeDiamond": "Diamand",
+        "dxDiagram-shapeHeart": "Hart",
+        "dxDiagram-shapePentagon": "Vijfhoek",
+        "dxDiagram-shapeHexagon": "Zeshoek",
+        "dxDiagram-shapeOctagon": "Achthoek",
+        "dxDiagram-shapeStar": "Ster",
+        "dxDiagram-shapeArrowLeft": "Pijl naar links",
+        "dxDiagram-shapeArrowUp": "Pijl naar boven",
+        "dxDiagram-shapeArrowRight": "Pijl naar rechts",
+        "dxDiagram-shapeArrowDown": "Pijl naar onderen",
+        "dxDiagram-shapeArrowUpDown": "Pijl naar boven en beneden",
+        "dxDiagram-shapeArrowLeftRight": "Paal naar links en rechts",
+        "dxDiagram-shapeProcess": "Proces",
+        "dxDiagram-shapeDecision": "Beslissing",
+        "dxDiagram-shapeTerminator": "Aflsuiter",
+        "dxDiagram-shapePredefinedProcess": "Gedefinieerd proces",
+        "dxDiagram-shapeDocument": "Document",
+        "dxDiagram-shapeMultipleDocuments": "Meerdere documenten",
+        "dxDiagram-shapeManualInput": "Handmatige invoer",
+        "dxDiagram-shapePreparation": "Voorbereiding",
+        "dxDiagram-shapeData": "Data",
+        "dxDiagram-shapeDatabase": "Database",
+        "dxDiagram-shapeHardDisk": "Vaste schijf",
+        "dxDiagram-shapeInternalStorage": "Interne opslag",
+        "dxDiagram-shapePaperTape": "Papierband",
+        "dxDiagram-shapeManualOperation": "Handmatige operatie",
+        "dxDiagram-shapeDelay": "Vertraging",
+        "dxDiagram-shapeStoredData": "Opgeslagen data",
+        "dxDiagram-shapeDisplay": "Weergave",
+        "dxDiagram-shapeMerge": "Samenvoegen",
+        "dxDiagram-shapeConnector": "Verbinding",
+        "dxDiagram-shapeOr": "Of",
+        "dxDiagram-shapeSummingJunction": "Optelkruising",
+        "dxDiagram-shapeContainerDefaultText": "Container",
+        "dxDiagram-shapeVerticalContainer": "Vertikale Container",
+        "dxDiagram-shapeHorizontalContainer": "Horizontale Container",
+        "dxDiagram-shapeCardDefaultText": "Tekst",
+        "dxDiagram-shapeCardWithImageOnLeft": "Kaart met Afbeelding Links",
+        "dxDiagram-shapeCardWithImageOnTop": "Kaart met Afbeelding Boven",
+        "dxDiagram-shapeCardWithImageOnRight": "Kaart me Afbeelding Rechts",
+
+        "dxGantt-dialogTitle": "Titel",
+        "dxGantt-dialogStartTitle": "Start",
+        "dxGantt-dialogEndTitle": "Eind",
+        "dxGantt-dialogProgressTitle": "Voortgang",
+        "dxGantt-dialogResourcesTitle": "Bronnen",
+        "dxGantt-dialogResourceManagerTitle": "Beheer Bronnen",
+        "dxGantt-dialogTaskDetailsTitle": "Taak Details",
+        "dxGantt-dialogEditResourceListHint": "Pas Bronnen aan",
+        "dxGantt-dialogEditNoResources": "Geen bronnen",
+        "dxGantt-dialogButtonAdd": "Toevoegen",
+        "dxGantt-contextMenuNewTask": "Nieuwe taak",
+        "dxGantt-contextMenuNewSubtask": "Nieuwe sub-taak",
+        "dxGantt-contextMenuDeleteTask": "Verwijder taak",
+        "dxGantt-contextMenuDeleteDependency": "Verwijder afhankelijkheid",
+        "dxGantt-dialogTaskDeleteConfirmation": "Door het verwijderen van deze taak zullen ook alle subtaken en verbindingen verwijderd worden. Zeker weten?",
+        "dxGantt-dialogDependencyDeleteConfirmation": "Moet deze afhankelijkheid van de taak verwijderd worden?",
+        "dxGantt-dialogResourcesDeleteConfirmation": "Door deze bron te verwijderen, wordt deze ook uit alle taken verwijderd waaraan hij is toegewezen. Zeker weten om bron '{0}' te verwijderen?",
+        "dxGantt-dialogConstraintCriticalViolationMessage": "De taak die verplaatst moet worden is gekoppeld aan een andere taak door een afhankelijkheidsrelatie. Deze wijziging is in strijd met de afhankelijkheidsregels. Hoe verder?",
+        "dxGantt-dialogConstraintViolationMessage": "De taak die verplaatst moet worden is gekoppeld aan een andere taak door een afhankelijkheidsrelatie. Hoe verder?",
+        "dxGantt-dialogCancelOperationMessage": "Annuleer de operatie",
+        "dxGantt-dialogDeleteDependencyMessage": "Verwijder de afhankelijkheid",
+        "dxGantt-dialogMoveTaskAndKeepDependencyMessage": "Verplaats de taak en behoud de afhankelijkheid",
+        "dxGantt-undo": "Ongedaan maken",
+        "dxGantt-redo": "Opnieuw doen",
+        "dxGantt-expandAll": "Alles uitklappen",
+        "dxGantt-collapseAll": "Alles inklappen",
+        "dxGantt-addNewTask": "Nieuwe taak",
+        "dxGantt-deleteSelectedTask": "Verwijder geselecteerde taak",
+        "dxGantt-zoomIn": "Inzoomen",
+        "dxGantt-zoomOut": "Uitzoomen",
+        "dxGantt-fullScreen": "Volledig scherm"
     }
 }
